tooling/nargo_cli/tests/snapshots/execution_failure/workspace_fail/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed constraint
  ┌─ crates/a/src/main.nr:2:5
  │
2 │     assert(x == y);
  │     --------------
  │
  = Call stack:
    1: main
            at crates/a/src/main.nr:2:5

Failed to solve program: 'Cannot satisfy constraint'
