tooling/nargo_cli/tests/snapshots/execution_failure/workspace_fail/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed to solve program: 'Failed to solve brillig function'
  ┌─ crates/a/src/main.nr:2:5
  │
2 │     assert(x == y);
  │     --------------
  │
  = Call stack:
    1: main
            at crates/a/src/main.nr:2:5

Failed to solve program: 'Failed to solve brillig function'
