tooling/nargo_cli/tests/snapshots/execution_failure/workspace_fail/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
  ┌─ crates/a/src/main.nr:2:12
  │
2 │     assert(x == y);
  │            ------
  │
  = Call stack:
    1. crates/a/src/main.nr:1:4

Error interpreting main function
