tooling/nargo_cli/tests/snapshots/execution_failure/workspace_fail/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Failed constraint
  ┌─ crates/a/src/main.nr:2:12
  │
2 │     assert(x == y);
  │            ------
  │
  = Call stack:
    1. crates/a/src/main.nr:2:12

Failed to solve program: 'Cannot satisfy constraint'
